# RG62-catches-the-fly.

./: .gitignore  CMakeLists.txt  Makefile  README.md  catch_the_fly  catch_the_fly.cpp  enemy.cpp  enemy.hpp  main  main.cpp  platform.cpp  platform.hpp  spider.cpp  spider.hpp
headers/: enemy.hpp  image.h  platform.hpp  spider.hpp
src/: catch_the_fly.cpp  enemy.cpp  image.c  platform.cpp  spider.cpp
